# Karaoketron

./: CMakeLists.txt  README.md
cdgdecode/: CMakeCache.txt  CMakeLists.txt  README.txt
cdgdecode/include/cdgdecode/: CDGBuffer.h  Color.h  ColorTable.h  Decode.h  Globals.h  Packet.h  PacketProcessor.h  Screen.h  Tile.h
cdgdecode/src/: CDGBuffer.cpp  CDGBuffer.h  ChannelEncoding.h  ColorEncoding.h  FileExists.h  PacketProcessor.h  PodChecker.h  ReadFile.h  TileFromData.h  cdgdecode_BitMask.h  cdgdecode_BorderPreset.h  cdgdecode_Color.cpp  cdgdecode_Color.h  cdgdecode_ColorTable.cpp  cdgdecode_ColorTable.h  cdgdecode_Decode.cpp  cdgdecode_Decode.h  cdgdecode_Header.cpp  cdgdecode_Header.h  cdgdecode_InstructionValues.h  cdgdecode_LoadPalette.h  cdgdecode_MemoryPreset.h  cdgdecode_Packet.cpp  cdgdecode_Packet.h  cdgdecode_Screen.h  cdgdecode_Tile.cpp  cdgdecode_Tile.h  cdgdecode_TileBlock.h  cdgdecode_XORTileBlock.h
cdgdecode/tests/: FileExistTests.cc  LoadPaletteTests.cc  MaryHadALittleLambTest.cc  MockEngine.h  PacketProcessorTests.cc  PacketTests.cc  TileTests.cc  main.cc
cdgqt5/: CMakeLists.txt
cdgqt5/include/cdgqt5/: CDGModel.h  CDGWidget.h  Globals.h
cdgqt5/src/: CDGControls.cpp  CDGControls.h  CDGModel.cpp  CDGModel.h  CDGWidget.cpp  CDGWidget.h
cdgraster/: CMakeLists.txt  cdgraster_automoc.cpp  moc_CDGRasterWidget.cpp
cdgraster/src/: CDGRasterWidget.cpp  CDGRasterWidget.h  main.cpp
sandbox/: sandbox.ui
viewer/: CMakeLists.txt
viewer/src/: Viewer.cpp  Viewer.h  Viewer.ui  main.cpp
